Local Storage pour le delete

--- a/www/html/menu.html
+++ b/www/html/menu.html
@@ -5,17 +5,31 @@
       <div class="left">
         <ons-radio name="categoryGroup" input-id="r-all" checked></ons-radio>
       </div>
-      <label class="center" for="r-all">All</label>
+      <label class="center" for="r-all">Toutes</label>
     </ons-list-item>
     <ons-list-item tappable category-id="">
       <div class="left">
         <ons-radio name="categoryGroup" input-id="r-no"></ons-radio>
       </div>
-      <label class="center" for="r-no">No category</label>
+      <label class="center" for="r-no">Sans Catégorie</label>
     </ons-list-item>
   </ons-list>
 
-  <ons-list-title>Custom categories</ons-list-title>
+  <ons-list-title>Categories Personnalisées</ons-list-title>
   <ons-list id="custom-category-list">
   </ons-list>
+
+  <ons-list-title>Auteurs</ons-list-title>
+  <ons-list-item>
+    <div>
+      Jules Sayer
+    </div>
+  </ons-list-item>
+
+  <ons-list-item>
+    <div class="center">
+      Flavien Chagras
+    </div>
+  </ons-list-item>
+
 </ons-page>
