--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
                     <ons-icon icon="ion-navicon, material:md-menu" size="32px, material:24px"></ons-icon>
                 </ons-toolbar-button>
             </div>
-            <div class="center">TodoApp | CHAGRAS - SAYER</div>
+            <div class="center">TodoApp</div>
             <div class="right">
                 <!-- Toolbar-button  only visible for iOS/other. -->
                 <ons-if platform="ios other">
@@ -71,6 +71,7 @@
 <script src="assets/js/app.js"></script>
 <script src="assets/js/services.js"></script>
 <script src="assets/js/controllers.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>ons.platform.select('android');</script>
 </body>
 
