Ajout Q4 (choix des categories) + suppression de categorie et taches associes

--- a/www/html/new_task.html
+++ b/www/html/new_task.html
@@ -19,6 +19,11 @@
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
+      <div>Choix de la catégorie: </div>
+      <ons-select id="categories-list">
+      </ons-select>
+    </ons-list-item>
+    <ons-list-item modifier="nodivider" id="new-category">
       <div class="center">
         <ons-input id="category-input" type="text" placeholder="Catégorie" float></ons-input>
       </div>
