--- a/www/html/details_task.html
+++ b/www/html/details_task.html
@@ -1,64 +1,63 @@
 <ons-page id="detailsTaskPage">
-  <ons-toolbar>
-    <div class="left"><ons-back-button>Back</ons-back-button></div>
-    <div class="center">Task Details</div>
-    <div class="right">
-      <ons-toolbar-button component="button/save-task">
-        <ons-if platform="android">
-          <ons-icon icon="md-save"></ons-icon>
-        </ons-if>
-        <ons-if platform="ios other">
-          Save
-        </ons-if>
-      </ons-toolbar-button>
-    </div>
-  </ons-toolbar>
+    <ons-toolbar>
+        <div class="left">
+            <ons-back-button>Todos</ons-back-button>
+        </div>
+        <div class="center">Détails de la Tâche</div>
+        <div class="right">
+            <ons-if platform="android">
+                <ons-toolbar-button component="button/save-task">
+                    <ons-icon icon="md-save"></ons-icon>
+                </ons-toolbar-button>
+            </ons-if>
+        </div>
+    </ons-toolbar>
 
-  <ons-list-title>Modify your task</ons-list-title>
-  <ons-list>
-    <ons-list-item modifier="nodivider">
-      <ons-if platform="ios other" class="left left-label">
-        Title
-      </ons-if>
-      <div class="center">
-        <ons-input id="title-input" type="text" placeholder="I want to..." float></ons-input>
-      </div>
-    </ons-list-item>
-    <ons-list-item modifier="nodivider">
-      <ons-if platform="ios other" class="left left-label">
-        Category
-      </ons-if>
-      <div class="center">
-        <ons-input id="category-input" type="text" placeholder="Category" float></ons-input>
-      </div>
-    </ons-list-item>
-    <ons-list-item modifier="nodivider">
-      <ons-if platform="ios other" class="left left-label">
-        Description
-      </ons-if>
-      <div class="center">
-        <ons-input id="description-input" type="text" placeholder="Description" float></ons-input>
-      </div>
-    </ons-list-item>
-  </ons-list>
+    <ons-list-title>Modifier vôtre tâche</ons-list-title>
+    <ons-list>
+        <ons-list-item modifier="nodivider">
+            <div class="center">
+                <ons-input id="title-input" type="text" placeholder="Je veux ..." float></ons-input>
+            </div>
+        </ons-list-item>
+        <ons-list-item modifier="nodivider" id="new-category">
+            <div class="center">
+                <ons-input id="category-input" type="text" placeholder="Catégorie" float></ons-input>
+            </div>
+        </ons-list-item>
+        <ons-list-item modifier="nodivider">
+            <div class="center">
+                <ons-input id="description-input" type="text" placeholder="Description" float></ons-input>
+            </div>
+        </ons-list-item>
+        <ons-list-item modifier="nodivider">
+            <div class="center">
+                <ons-input id="deadline-input" type="date" placeholder="" float></ons-input>
+            </div>
+        </ons-list-item>
+    </ons-list>
 
-  <ons-list-title>Options supplémentaires</ons-list-title>
-  <ons-list>
-    <ons-list-item modifier="nodivider">
-      <label class="center" for="inner-highlight-input">
-        Surligner?
-      </label>
-      <div class="right">
-        <ons-switch id="highlight-input" input-id="inner-highlight-input"></ons-switch>
-      </div>
-    </ons-list-item>
-    <ons-list-item modifier="nodivider">
-      <label class="center" for="inner-urgent-input">
-        Est-ce urgent?
-      </label>
-      <div class="right">
-        <ons-switch id="urgent-input" input-id="inner-urgent-input" disabled></ons-switch>
-      </div>
-    </ons-list-item>
-  </ons-list>
+    <ons-list-title>Autres options</ons-list-title>
+    <ons-list>
+        <ons-list-item modifier="nodivider">
+            <label class="center" for="inner-highlight-input">
+                Surligner ?
+            </label>
+            <div class="right">
+                <ons-switch id="highlight-input" input-id="inner-highlight-input"></ons-switch>
+            </div>
+        </ons-list-item>
+        <ons-list-item modifier="nodivider">
+            <label class="center" for="inner-urgent-input">
+                Urgent ?
+            </label>
+            <div class="right">
+                <ons-switch id="urgent-input" input-id="inner-urgent-input"></ons-switch>
+            </div>
+        </ons-list-item>
+    </ons-list>
+
+    <ons-if platform="ios other">
+        <ons-button modifier="large" component="button/save-task">Ajouter</ons-button>
+    </ons-if>
 </ons-page>
