--- a/www/html/new_task.html
+++ b/www/html/new_task.html
@@ -33,6 +33,11 @@
         <ons-input id="description-input" type="text" placeholder="Description" float></ons-input>
       </div>
     </ons-list-item>
+    <ons-list-item modifier="nodivider">
+      <div class="center">
+        <ons-input id="deadline-input" type="date" placeholder="" float></ons-input>
+      </div>
+    </ons-list-item>
   </ons-list>
 
   <ons-list-title>Autres options</ons-list-title>
