Suppression des taches outdated

--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,9 @@
                 <ons-speed-dial-item>
                     <ons-icon icon="md-delete" component="button/delete-all"></ons-icon>
                 </ons-speed-dial-item>
+                <ons-speed-dial-item>
+                    <i class="far fa-clock" component="button/delete-all-outdated-tasks"></i>
+                </ons-speed-dial-item>
                 <ons-speed-dial-item component="button/new-task">
                     <ons-icon icon="md-edit"></ons-icon>
                 </ons-speed-dial-item>
